--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -1,122 +1,152 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jwhitmarsh.myapplication.Scoreboard"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:text="battingteam"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/batting_team"
-        android:gravity="center"
-        android:textSize="30dp" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context="com.example.jwhitmarsh.myapplication.Scoreboard"
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
 
         <TextView
+            android:text="battingteam"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/batting_score"
-            android:text="400"
-            android:textSize="100dp" />
+            android:id="@+id/batting_team"
+            android:gravity="center"
+            android:textSize="30dp" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/batting_score"
+                android:text="400"
+                android:textSize="100dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="100dp"
+                android:text="/" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="100dp"
+                android:text="2"
+                android:id="@+id/batting_wickets" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="5dp"
+                android:text="End of over"
+                android:gravity="left" />
+
+            <TextView
+                android:id="@+id/over_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="5dp"
+                android:text="20"
+                android:gravity="left" />
+
+            <TextView
+                android:id="@+id/over_runs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="5dp"
+                android:text="(2 runs)" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RR:"
+                android:paddingRight="5dp"
+                android:gravity="right" />
+
+            <TextView
+                android:id="@+id/over_rr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3.33" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/batter_one"
+                android:text="C. Tilyard 25 (46b)*"
+                android:layout_alignParentLeft="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/batter_two"
+                android:text="L. Woodley 0 (5b)"
+                android:layout_alignParentRight="true" />
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="100dp"
-            android:text="/" />
+            android:text="G. Docker (rfs) 5-0-13-1" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="100dp"
-            android:text="2"
-            android:id="@+id/batting_wickets" />
+            android:id="@+id/commentary"
+            android:orientation="vertical"
+            android:paddingTop="20dp">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/black" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Commentary"
+                android:paddingTop="10dp" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#ff9900"
+                android:text="24.6 1W Grout to Tilyard : [runout] Greedy and plain stupid. Tilyard and Miheso have tried to go for the extra run, taking on Rayudu's arm in the deep and losing. And that wicket's been thrown away.C. Tilyard run out (S. Rayudu) 41 (67b 2x4 1x6) SR:61.19" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="24.5 Grout to Tilyard : Ooh, so close to an edge. Rayudu was sure he heard something but the umpire isn't convinced." />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="End of over 20 (2 runs)"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RR: 3.19"
-            android:layout_alignParentRight="true" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/batter_one"
-            android:text="C. Tilyard 25 (46b)*"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/batter_two"
-            android:text="L. Woodley 0 (5b)"
-            android:layout_alignParentRight="true" />
-    </RelativeLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="G. Docker (rfs) 5-0-13-1" />
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/commentary"
-        android:orientation="vertical"
-        android:paddingTop="20dp">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/black" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Commentary"
-            android:paddingTop="10dp" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#ff9900"
-            android:text="24.6 1W Grout to Tilyard : [runout] Greedy and plain stupid. Tilyard and Miheso have tried to go for the extra run, taking on Rayudu's arm in the deep and losing. And that wicket's been thrown away.C. Tilyard run out (S. Rayudu) 41 (67b 2x4 1x6) SR:61.19" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="24.5 Grout to Tilyard : Ooh, so close to an edge. Rayudu was sure he heard something but the umpire isn't convinced." />
-
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
