--- a/app/src/main/res/menu/scoreboard_actions.xml
+++ b/app/src/main/res/menu/scoreboard_actions.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <!-- Search, should appear as action button -->
-    <item android:id="@+id/action_search"
+    <item android:id="@+id/action_refresh"
         android:title="@string/scoreboard_refresh"
         android:showAsAction="ifRoom" />
     <!-- Settings, should always be in the overflow -->
